--- a/FlightApp/FlightApp/templates/contact.html
+++ b/FlightApp/FlightApp/templates/contact.html
@@ -1,14 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlightApp</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}"/>
     <script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
-    {#
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    #}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -30,18 +27,13 @@
         </div>
     </div>
 </nav>
-<div class="d-flex justify-content-evenly mt-5">
-    {% for flight in flight_list %}
-    <div class="card" style="width: 18rem;">
-        <img src="{{ flight.photo.url }}" class="card-img-top" style="height:300px" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{ flight.code|default:"000" }}</h5>
-            <p class="card-text">{{ flight.take_off_airport }} - {{ flight.landing_airport }}</p>
-            <a href="{% url 'details' flight.id %}" class="btn btn-primary">Details</a>
-            <a href="{% url 'edit-flight' flight.id %}" class="btn btn-info">Edit </a>
-        </div>
-    </div>
-    {% endfor %}
+
+<div class="mt-5 d-flex justify-content-center">
+    <form method="post" action="{% url 'contact' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
 </div>
 
 </body>
